# embedded-data-syncing

./: LICENSE  README.md
elp/elp-usb16mp01-H120/: 99-elp-cameras.rules  99-usb-camera.rules  README.md  elp-usb16mp01-H120.py
elp/elp-usb16mp01-H120/templates/: index.html  login.html  playback.html
esp/basic-cam-save-to-sd/arduino/esp-32-sd-card/: convert-avi-custom-normal.py  esp-32-sd-card.ino  local_server.h  visual_processing.h
esp/basic-cam/esp32-CAM-MB/: platformio.ini
esp/basic-cam/esp32-CAM-MB/include/: secrets.h
esp/basic-cam/esp32-CAM-MB/src/: app_httpd.cpp
esp/basic/espressif-esp32-wroom-32D-upesy/: platformio.ini
esp/basic/espressif-esp32-wroom-32D-upesy/src/: main.cpp
esp/http/esp32-CAM-MB/: README.md  platformio.ini
esp/http/esp32-CAM-MB/include/: README  hardware_constants.h  secrets.h
esp/http/esp32-CAM-MB/server-scripts/: camera-stream.py  (+4 more)
esp/http/esp32-CAM-MB/server-scripts/rust_server/: Cargo.toml  README.md
esp/http/esp32-CAM-MB/server-scripts/rust_server/src/: main.rs  mdns_discovery.rs  server.rs
esp/http/esp32-CAM-MB/server-scripts/rust_server/src/static/: index.html
esp/http/esp32-CAM-MB/server-scripts/rust_server/static/: index.html
esp/ros2-cam/esp32-CAM-MB/: .gitignore  README.md  platformio.ini
esp32-CAM-MB/basic-cam/esp32-CAM-MB/: platformio.ini
esp32-CAM-MB/mqtt/espressif-esp32-wroom-32D-upesy/: platformio.ini
esp32-wroom-32d/basic/espressif-esp32-wroom-32D-upesy/: platformio.ini
esp32-wroom-32d/camera-ultrasound/TODO/: platformio.ini
esp32-wroom-32d/mqtt/espressif-esp32-wroom-32D-upesy/: platformio.ini
(+26 files in other folders)
